# Generated by Django 3.2.6 on 2021-08-22 13:48

from django.conf import settings
from django.db import migrations, models
import django.db.models.deletion


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        migrations.swappable_dependency(settings.AUTH_USER_MODEL),
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='Client',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('uid', models.UUIDField(default=None, editable=False, unique=True)),
                ('user', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to=settings.AUTH_USER_MODEL)),
            ],
        ),
        migrations.CreateModel(
            name='Pool',
            fields=[
                ('pid', models.UUIDField(default=None, editable=False, primary_key=True, serialize=False, unique=True)),
                ('is_active', models.BooleanField(default=True)),
                ('comment', models.CharField(max_length=400)),
                ('creator', models.ForeignKey(editable=False, on_delete=django.db.models.deletion.PROTECT, to='coursework.client')),
                ('group', models.OneToOneField(on_delete=django.db.models.deletion.CASCADE, to='auth.group')),
            ],
        ),
        migrations.CreateModel(
            name='Subject',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=50)),
                ('comment', models.CharField(max_length=400)),
                ('is_active', models.BooleanField(default=True)),
                ('opened_time', models.DateTimeField(auto_now_add=True)),
                ('author', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='coursework.client')),
                ('pid', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='coursework.pool')),
            ],
        ),
        migrations.CreateModel(
            name='Payment',
            fields=[
                ('id', models.AutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('sum', models.DecimalField(decimal_places=2, max_digits=42)),
                ('closed_time', models.DateTimeField(blank=True, null=True)),
                ('comment', models.CharField(max_length=400)),
                ('payer', models.ForeignKey(on_delete=django.db.models.deletion.PROTECT, to='coursework.client')),
                ('subject', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='coursework.subject')),
            ],
        ),
    ]
